# My1RenderEngine

./: .gitignore  .gitmodules  CMakeLists.txt  My1GameEngine.sln  README.md
Libs/glad/include/glad/: glad.h
Libs/glad/src/: glad.c
My1GameEngine/: FileSystem.cpp  FileSystem.h  My1GameEngine.vcxproj  My1GameEngine.vcxproj.filters  RenderActionsStruct.h  RenderSystem.cpp  RenderSystem.h  main.cpp
My1GameEngine/Data/: fragmentshader.glsl  fragmentshader_old.glsl  help  vertexshader.glsl
My1GameEngine/x64/Debug/: vc142.idb
My1GameEngine/x64/Debug/My1GameEngine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  My1GameEngine.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
My1GameEngine/x64/Release/My1GameEngine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  My1GameEngine.lastbuildstate  My1GameEngine.write.1u.tlog  link.command.1.tlog  link.delete.1.tlog  link.read.1.tlog  link.write.1.tlog
data/: fragmentshader.glsl  vertexshader.glsl
src/: Camera.cpp  Camera.h  FileSystem.cpp  FileSystem.h  Mesh.cpp  Mesh.h  RenderActionsStruct.h  RenderSystem.cpp  RenderSystem.h  main.cpp
src/Gameplay/: GraphicsObject.cpp  GraphicsObject.h
x64/Debug/: My1GameEngine.ilk
x64/Release/: My1GameEngine.iobj  My1GameEngine.ipdb
